fix(framing): JobRunr field test — 4 root-cause reliability fixes — v1.69.0
Architectural audit of JobRunr (Gradle multi-module, 707-class framework-agnostic
library) surfaced 4 reproducible defects. Root-cause fixes generalizing to any
equivalent Java repo, each with regression coverage.

BUG #1 migrate-check MIG-011: prefix heuristic flagged com.sun.net.httpserver et al.
as JDK internals (inflated blocking_count 0→14). Now consults a JDK-generated
allowlist of unconditionally-exported packages (scripts/generate_jdk_exports.py →
jdk_exports.py); genuine internals (sun.misc.Unsafe, com.sun.tools/jdi/source) stay
high. JobRunr blocking_count 14→0.

BUG #2 phantom symbols from prose: non-annotated fast-path symbol scan ran
class/interface/enum regex over raw source, tokenizing words in Javadoc/strings
(org.jobrunr.configuration.provides). Now strips comments + string literals and
requires a capitalized type name — fixes the shared graph behind modernize/repo-ir/
impact/export.

BUG #3 endpoints: imperative router DSLs (get("/x", handler)) were a total false
negative. Shape-based detector (HTTP verb + path literal + second arg) adds them at
confidence=medium, source=router_dsl. JobRunr endpoints 0→12.

BUG #4 classification bias: Gradle detector substring-matched "quarkus" in a
subproject EXCLUSION filter (now matches only real dependency/plugin lines); a
framework confined to a minority adapter module no longer drives project_type; a
multi-module JVM repo with no defining framework → library not unknown; explain
infers a low-confidence structural stereotype (in-degree/lifecycle/naming) instead
of "may be a plain class or utility". JobRunr project_type api→library, frameworks
[Quarkus]→[].

2904 passed. Pre-existing ofbiz file_chunker test (shrunk external file) deselected.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>